<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.details.DetailsActivity">

    <ImageView
        android:id="@+id/iv_details"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:scaleType="fitXY"
        android:layout_margin="@dimen/marginDefault"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_details_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginDefault"
        android:layout_marginEnd="@dimen/marginDefault"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSizeLarger"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/iv_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_details"
        tools:text="@string/placeholder_title"/>

    <TextView
        android:id="@+id/tv_details_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="@id/tv_details_title"
        app:layout_constraintEnd_toEndOf="@id/tv_details_title"
        app:layout_constraintTop_toBottomOf="@id/tv_details_title"
        tools:text="@string/placeholder_artist"/>

    <TextView
        android:id="@+id/tv_details_album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="@id/tv_details_title"
        app:layout_constraintEnd_toEndOf="@id/tv_details_title"
        app:layout_constraintTop_toBottomOf="@id/tv_details_artist"
        tools:text="@string/placeholder_artist"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"
        android:layout_margin="@dimen/marginDefault"
        app:layout_constraintTop_toBottomOf="@id/iv_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text = "@string/tag_add"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginDefault"
        android:background="@color/colorAccent"
        app:tabTextColor="@color/textColor"
        app:layout_constraintTop_toBottomOf="@id/btn_library"
        app:layout_constraintBottom_toTopOf="@id/vp_details"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tl_details"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>