...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginDefault"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/textColor"
...
            android:text="@string/text_tracks"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            app:layout_constraintTop_toBottomOf="@id/iv_album" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_album"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/item_animation"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tracks"
...
